fix: :bug: adjust SideMenu height for mobile view and ensure proper overflow handling

--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -77,7 +77,7 @@
       bottom: 0; /*lo mantiene pegado abajo*/
       top: auto; /*lo mantiene pegado abajo junto a la propiedad 'bottom'*/
       width: 100%;
-      height: 70px;
+      height: auto;
       margin-bottom: 0;
       border-right: none;
       border-top: 1px solid #ccc;
@@ -85,6 +85,7 @@
       justify-content: space-around;
       align-items: center;
       flex-direction: row;
+      overflow-x: auto; /* permite scroll horizontal sino cabe*/
       z-index: 1000; /* evita que las imagenes de los posts se superpongan al sidemenu*/
     }
     .option {
